--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,29 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.7",
+        "nelmio/api-doc-bundle": "^4.0",
+        "symfony-bundles/json-request-bundle": "^3.1",
+        "symfony/asset": "5.1.*",
+        "symfony/browser-kit": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
-        "symfony/yaml": "5.1.*"
-    },
-    "require-dev": {
+        "symfony/serializer": "5.1.*",
+        "symfony/twig-bundle": "5.1.*",
+        "symfony/validator": "5.1.*",
+        "symfony/yaml": "5.1.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -59,5 +72,10 @@
             "allow-contrib": false,
             "require": "5.1.*"
         }
+    },
+    "require-dev": {
+        "dama/doctrine-test-bundle": "^6.4",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/phpunit-bridge": "^5.1"
     }
 }
